docs/2.0.1/_sources/api/gwpy.table.EventTable.rst.txt


EventTable
=====================

.. currentmodule:: gwpy.table

.. autoclass:: EventTable
   :no-inherited-members:

   
     None
   

   
   

   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~EventTable.ColumnClass
      ~EventTable.colnames
      ~EventTable.dtype
      ~EventTable.groups
      ~EventTable.has_masked_columns
      ~EventTable.has_masked_values
      ~EventTable.has_mixin_columns
      ~EventTable.iloc
      ~EventTable.indices
      ~EventTable.info
      ~EventTable.loc
      ~EventTable.loc_indices
      ~EventTable.mask
      ~EventTable.masked
      ~EventTable.meta

   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EventTable.add_column
      ~EventTable.add_columns
      ~EventTable.add_index
      ~EventTable.add_row
      ~EventTable.argsort
      ~EventTable.as_array
      ~EventTable.binned_event_rates
      ~EventTable.cluster
      ~EventTable.convert_bytestring_to_unicode
      ~EventTable.convert_unicode_to_bytestring
      ~EventTable.copy
      ~EventTable.event_rate
      ~EventTable.fetch
      ~EventTable.fetch_open_data
      ~EventTable.field
      ~EventTable.filled
      ~EventTable.filter
      ~EventTable.from_pandas
      ~EventTable.get_column
      ~EventTable.group_by
      ~EventTable.hist
      ~EventTable.index_column
      ~EventTable.index_mode
      ~EventTable.insert_row
      ~EventTable.itercols
      ~EventTable.iterrows
      ~EventTable.keep_columns
      ~EventTable.keys
      ~EventTable.more
      ~EventTable.pformat
      ~EventTable.pformat_all
      ~EventTable.plot
      ~EventTable.pprint
      ~EventTable.pprint_all
      ~EventTable.read
      ~EventTable.remove_column
      ~EventTable.remove_columns
      ~EventTable.remove_indices
      ~EventTable.remove_row
      ~EventTable.remove_rows
      ~EventTable.rename_column
      ~EventTable.rename_columns
      ~EventTable.replace_column
      ~EventTable.reverse
      ~EventTable.scatter
      ~EventTable.show_in_browser
      ~EventTable.show_in_notebook
      ~EventTable.sort
      ~EventTable.tile
      ~EventTable.to_pandas
      ~EventTable.values_equal
      ~EventTable.write

   
   

   
   

   .. rubric:: Attributes Documentation

   
   .. autoattribute:: ColumnClass
   .. autoattribute:: colnames
   .. autoattribute:: dtype
   .. autoattribute:: groups
   .. autoattribute:: has_masked_columns
   .. autoattribute:: has_masked_values
   .. autoattribute:: has_mixin_columns
   .. autoattribute:: iloc
   .. autoattribute:: indices
   .. autoattribute:: info
   .. autoattribute:: loc
   .. autoattribute:: loc_indices
   .. autoattribute:: mask
   .. autoattribute:: masked
   .. autoattribute:: meta

   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: add_column
   .. automethod:: add_columns
   .. automethod:: add_index
   .. automethod:: add_row
   .. automethod:: argsort
   .. automethod:: as_array
   .. automethod:: binned_event_rates
   .. automethod:: cluster
   .. automethod:: convert_bytestring_to_unicode
   .. automethod:: convert_unicode_to_bytestring
   .. automethod:: copy
   .. automethod:: event_rate
   .. automethod:: fetch
   .. automethod:: fetch_open_data
   .. automethod:: field
   .. automethod:: filled
   .. automethod:: filter
   .. automethod:: from_pandas
   .. automethod:: get_column
   .. automethod:: group_by
   .. automethod:: hist
   .. automethod:: index_column
   .. automethod:: index_mode
   .. automethod:: insert_row
   .. automethod:: itercols
   .. automethod:: iterrows
   .. automethod:: keep_columns
   .. automethod:: keys
   .. automethod:: more
   .. automethod:: pformat
   .. automethod:: pformat_all
   .. automethod:: plot
   .. automethod:: pprint
   .. automethod:: pprint_all
   .. automethod:: read
   .. automethod:: remove_column
   .. automethod:: remove_columns
   .. automethod:: remove_indices
   .. automethod:: remove_row
   .. automethod:: remove_rows
   .. automethod:: rename_column
   .. automethod:: rename_columns
   .. automethod:: replace_column
   .. automethod:: reverse
   .. automethod:: scatter
   .. automethod:: show_in_browser
   .. automethod:: show_in_notebook
   .. automethod:: sort
   .. automethod:: tile
   .. automethod:: to_pandas
   .. automethod:: values_equal
   .. automethod:: write

   
   